# IronDust

./: .gitignore  Broadside.cpp  Broadside.hpp  CMakeLists.txt  Makefile  README.md  default.fsh  default.vsh  geometry.cpp  geometry.hpp  irondust.cpp  irondust.hpp  isgelement.cpp  isgelement.hpp  isgnode.cpp  isgnode.hpp  isgresource.cpp  isgresource.hpp  isgresourcenode.cpp  isgresourcenode.hpp  phong.fsh  phong.vsh  sgconstants.hpp  sgcontext.cpp  sgcontext.hpp  sglightnode.cpp  sglightnode.hpp  sgmaterialnode.cpp  sgmaterialnode.hpp  sgmodel.cpp  sgmodel.hpp  sgnode.cpp  sgnode.hpp  sgrendernode.cpp  sgrendernode.hpp  sgscene.cpp  sgscene.hpp  sgshadernode.cpp  sgshadernode.hpp  sgtexturenode.cpp  (+3 more)
app/: CMakeLists.txt  irondust.cpp
cmake/: options.cmake
irondust/: CMakeLists.txt
irondust/gl/: GLSLProgram.cpp  GLSLProgram.hpp  GLSLShader.cpp  GLSLShader.hpp  Image.cpp  Image.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  Texture3D.cpp  Texture3D.hpp  glIncludes.hpp  gl_error.cpp  gl_error.hpp  glfwIncludes.hpp  gloption.cpp  gloption.hpp  iglbindable.hpp
irondust/sg/: isgelement.cpp  isgelement.hpp  isgnode.cpp  isgnode.hpp  isgresource.cpp  isgresource.hpp  isgresourcenode.cpp  isgresourcenode.hpp  sgconstants.hpp  sgcontext.cpp  sgcontext.hpp  sgcubemapnode.cpp  sgcubemapnode.hpp  sglightnode.cpp  sglightnode.hpp  sgmaterialnode.cpp  sgmaterialnode.hpp  sgmodel.cpp  sgmodel.hpp  sgnode.cpp  sgnode.hpp  sgrendernode.cpp  sgrendernode.hpp  sgscene.cpp  sgscene.hpp  sgshadernode.cpp  sgshadernode.hpp  sgtexturenode.cpp  sgtexturenode.hpp  sgtransformnode.cpp  sgtransformnode.hpp
irondust/util/: log.hpp  math.cpp  math.hpp
shaders/: default.fsh  default.vsh  phong.fsh  phong.vsh  skybox.fsh  skybox.vsh
